# carrion

./: .gitignore  TODO.md  pyproject.toml
research/: backtest.py  calibration.py  calibration_over_time.py  candlestick_data.py  simulation.py  ws_data.py
research/kalshi/: __init__.py  _auth.py  messages.py  rest.py  ws.py
