[project]
name = "carrion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "polars>=1.41.1",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "websockets>=16.0",
]
